gl33-master/src/test/deca/context/valid/others/attributsPublic.deca
//Test valid : utilisation des attributs public

class MyClass{
  int a = 1;
}

{
  MyClass m = new MyClass();
  m.a;
}
