gl33-master/src/test/deca/context/invalid/other/declaration_meme_nom_int_void.deca
// Invalid
// Déclaration des variables de même nom (int et void)



{
   int a;
   void a;
}
